# conway-game-of-life-gui

./: Cargo.toml  README.md  flake.nix
src/: cells.rs  gui.rs  main.rs
