[package]
name = "cellular_automato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
env_logger = "0.10"
error-iter = "0.4"
getrandom = "0.2"
line_drawing = "1"
log = "0.4"
pixels = "*"
randomize = "3"
winit = "0.27"
winit_input_helper = "0.13"
rand = "*"
array2d = "0.3.0"
