[package]
name = "cellular_automato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
line_drawing = "1"
pixels = "*"
winit = "0.27"
winit_input_helper = "0.13"
rand = "*"
proc-macro2 = "1.0.6"
