[package]
name = "cellular_automato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
line_drawing = "1"
pixels = "*"
winit = "0.28"
winit_input_helper = "0.14"
rand = "*"
proc-macro2 = "1.0.6"
egui = "0.22"
egui-wgpu = "0.22"
egui-winit = { version = "0.22", default-features = false, features = ["links"] }
error-iter = "0.4"
